--- a/x2020.cabal
+++ b/x2020.cabal
@@ -28,6 +28,8 @@ executable x2020
     , Day7
     , Day8
     , Day9
+    , Day10
+    , Day11
     , ExampleCode
 
   -- other-extensions:
@@ -41,6 +43,7 @@ executable x2020
     , containers
     , text
     , MissingH
+    , data-ordlist
 
   hs-source-dirs:     src
   default-language:   Haskell2010
