--- a/x2020.cabal
+++ b/x2020.cabal
@@ -37,6 +37,9 @@ executable x2020
     , Day16
     , Day17
     , Day18
+    , Day19
+    , Day20
+    , Parser
     , ExampleCode
 
   -- other-extensions:
@@ -51,6 +54,7 @@ executable x2020
     , text
     , MissingH
     , data-ordlist
+    , lens
 
   hs-source-dirs:     src
   default-language:   Haskell2010
