--- a/x2020.cabal
+++ b/x2020.cabal
@@ -40,6 +40,7 @@ executable x2020
     , Day19
     , Day20
     , Day21
+    , Day22
     , Parser
     , ExampleCode
 
@@ -56,6 +57,7 @@ executable x2020
     , MissingH
     , data-ordlist
     , lens
+    , primes
 
   hs-source-dirs:     src
   default-language:   Haskell2010
